apps/base/frontend/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.localhost`)
      kind: Rule
      services:
        - name: frontend
          port: 80
